[tool.poetry]
name = "iops"
version = "0.1.0"
description = ""
authors = ["Lorenzo Maffioli <lorenzo.maffioli@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
iops = "iops.cli:cli"

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^6.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
flake8 = "^5.0.4"
flake8-simplify = "^0.19.3"
flake8-bugbear = "^22.10.27"
flake8-comprehensions = "^3.10.1"
mypy = "^0.990"
types-pyyaml = "^6.0.12.2"
types-setuptools = "^65.5.0.2"
pydocstyle = "^6.1.1"
toml = "^0.10.2"
pre-commit = "^2.20.0"
tox = "^3.27.0"
tox-pyenv = "^1.1.0"

[tool.black]
max-line-length = 100

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
