[tool.poetry]
name = "isops"
version = "0.2.1"
description = "Utility to ensure SOPS secrets are encrypterd."
authors = ["Lorenzo Maffioli <lorenzo.maffioli@gmail.com>"]
readme = "README.md"

repository = "https://github.com/lorenzophys/isops"
keywords = ["isops", "sops", "secrets"]

[tool.poetry.scripts]
isops = "isops.cli:cli"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
ruamel-yaml = "^0.18.0"
setuptools = "^69.5.1"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
isort = "^5.10.1"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
flake8 = "^7.0.0"
flake8-simplify = "^0.21.0"
flake8-bugbear = "^24.0.0"
flake8-comprehensions = "^3.10.1"
mypy = "^1.0.0"
types-pyyaml = "^6.0.12.2"
types-setuptools = "^65.5.0.2"
pydocstyle = "^6.1.1"
toml = "^0.10.2"
pre-commit = "^3.0.0"
tox = "^3.27.0"
tox-pyenv = "^1.1.0"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
